Fix baseline alignment of Clinic text and ® in nav logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,10 +246,19 @@ p {
   font-size: 1.2rem;
 }
 
+.nav-logo .logo-text {
+  display: inline;
+  line-height: 1;
+}
+
 .nav-logo .logo-text sup {
   font-size: 0.45em;
   margin-left: 1px;
   opacity: 0.6;
+  vertical-align: super;
+  position: relative;
+  top: -0.1em;
+  line-height: 0;
 }
 
 .nav-logo span.highlight {
